fix: Revert broken SEOP optimizations and add seamless XPU/CUDA support
Reverted:
- CG solver: Removed broken stop-gradient, restored implicit differentiation
- Mamba: Removed broken parallel scan, restored sequential (stable but slow)

Kept:
- cg_max_iter: 40 -> 3 for faster training

Added:
- Seamless XPU/CUDA auto-detection in hf_train.py
- XPU memory detection and micro_batch tuning
- XPU system info logging

Now tested locally on XPU before HF deployment.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)
Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/configs/max_aggression.yaml
+++ b/configs/max_aggression.yaml
@@ -24,7 +24,7 @@ spinor:
 
 propagator:
   cayley_dt: 0.1
-  cg_max_iter: 40          # Higher precision for aggressive training
+  cg_max_iter: 3           # Fast training (3 iterations sufficient)
   cg_tol: 1.0e-7
   nonlinear_alpha: 0.1
   laplacian_sparsity: 8
