fix: disable gradient checkpointing (causes tensor count mismatch)

--- a/configs/max_aggression.yaml
+++ b/configs/max_aggression.yaml
@@ -45,7 +45,7 @@ training:
   # Throughput Aggression
   batch_size: 16
   micro_batch_size: 2
-  gradient_checkpointing: true
+  gradient_checkpointing: false
 
 
   
