feat: XPU/Low-VRAM Support & Precision Hardening (SEOP Fix 29)
- Added sem/training/xpu_accelerator.py for native XPU support
- Added sem/training/precision_plugin.py to exclude Propagator from bf16
- Updated hf_train_lightning.py with auto-tuning for 8GB VRAM
- Updated MESHEncoder/BornSampler for memory efficiency
- Added log noise filtering for cleaner output
- Fixed Sinkhorn precision issues via low_vram_mode float32 casting

--- a/configs/max_aggression.yaml
+++ b/configs/max_aggression.yaml
@@ -24,12 +24,14 @@ spinor:
 
 propagator:
   cayley_dt: 0.01
-  cg_max_iter: 50
-  cg_tol: 1.0e-5
+  cg_max_iter: 3
+  cg_tol: 1.0e-7
   nonlinear_alpha: 0.01
   laplacian_sparsity: 8
+  pit_gamma: 1.0
 
 quantizer:
+
   codebook_size: 512
   group_size: 2
   fisher_ema_decay: 0.999
@@ -45,7 +47,7 @@ training:
   # Throughput Aggression
   batch_size: 16
   micro_batch_size: 2
-  gradient_checkpointing: false
+  gradient_checkpointing: true
 
 
   
