--- a/configs/max_aggression.yaml
+++ b/configs/max_aggression.yaml
@@ -9,11 +9,11 @@ model:
   max_seq_length: 2048
 
 encoder:
-  sdr_sparsity: 32
-  sdr_candidates: 128
-  sinkhorn_epsilon: 0.05
-  sinkhorn_max_iter: 50
-  sinkhorn_tol: 1.0e-3
+  sdr_sparsity: 8
+  sdr_candidates: 32
+  sinkhorn_epsilon: 0.1
+  sinkhorn_max_iter: 10
+  sinkhorn_tol: 1.0e-2
 
 spinor:
   block_size: 8
@@ -23,10 +23,12 @@ spinor:
   d_conv: 4
 
 propagator:
-  cayley_dt: 0.01
-  cg_max_iter: 3
-  cg_tol: 1.0e-7
-  nonlinear_alpha: 0.01
+  cayley_dt: 0.005
+  cg_max_iter: 20
+  cg_tol: 1.0e-4
+  lazy_cg: false
+  direct_solve: true
+  nonlinear_alpha: 0.005
   laplacian_sparsity: 8
   pit_gamma: 1.0
 
@@ -47,7 +49,7 @@ training:
   # Throughput Aggression
   batch_size: 16
   micro_batch_size: 2
-  gradient_checkpointing: true
+  gradient_checkpointing: false
 
 
   
@@ -55,11 +57,13 @@ training:
   dtype: float32           # Real-Block Isomorphism (R2) mapping
   
   # Optimization
-  learning_rate: 1.2e-3    # Scaled for 4096 batch size
+  learning_rate: 1.0e-6
   weight_decay: 0.1
-  warmup_steps: 1000
+  warmup_steps: 8000
   max_steps: 100000
-  gradient_clip: 1.0
+  gradient_clip: 0.2
+  unitary_lambda: 0.005
+
 
   # Data Pipeline (RAM Optimized)
   dataset_name: "HuggingFaceFW/fineweb-edu"
@@ -71,7 +75,7 @@ training:
   scheduler_type: "wsd"
   stable_steps: 0
   decay_steps: 10000
-  lr_min_ratio: 0.1
+  lr_min_ratio: 0.05
 
   # Infrastructure
   log_interval: 5
