feat: SEM V8.0 architecture + training infrastructure
- Add V8.0 model (model_v8.py) with Lindblad dissipation, HybridAutomata,
  QuaternionicEscape, and mHC hyper-connections
- Add Engram module (DeepSeek-style O(1) conditional memory)
- Add Sinkhorn-Knopp with float64 convergence checking
- Fix WSD scheduler: trigger cosine decay after warmup (was flat forever)
- Fix safe_complex for AMP dtype mismatch (float32/bfloat16)
- Fix health check batch mismatch (_H_prev buffer size)
- Add V8Config dataclass and model_version dispatch in trainer/lightning
- Add v8_test.yaml and h100_max.yaml configs
- Add tokenizer.json for standalone training

--- a/configs/l40s_full.yaml
+++ b/configs/l40s_full.yaml
@@ -42,7 +42,7 @@ sampler:
 training:
   batch_size: 512
   micro_batch_size: 16
-  gradient_checkpointing: true
+  gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
   learning_rate: 6.0e-4
   weight_decay: 0.01
