--- a/configs/test_real_data.yaml
+++ b/configs/test_real_data.yaml
@@ -50,7 +50,7 @@ training:
   dataset_name: HuggingFaceFW/fineweb-edu
   decay_steps: 5000
   dtype: float32
-  gradient_checkpointing: true
+  gradient_checkpointing: false  # Disabled - tensor mismatch bug
   gradient_clip: 1.0
   health_check_interval: 100
   keep_checkpoints: 3
