--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -46,7 +46,7 @@ training:
   warmup_steps: 2000
   max_steps: 100000
   gradient_clip: 1.0
-  gradient_checkpointing: true
+  gradient_checkpointing: false  # Disabled - causes tensor count mismatch bug
 
   # Data
   dataset_name: "HuggingFaceFW/fineweb-edu"
