--- a/configs/xpu_optimized.yaml
+++ b/configs/xpu_optimized.yaml
@@ -45,7 +45,7 @@ sampler:
 training:
   batch_size: 32
   micro_batch_size: 2
-  gradient_checkpointing: true
+  gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
   learning_rate: 3.0e-4
   weight_decay: 0.01
