--- a/configs/v8_test.yaml
+++ b/configs/v8_test.yaml
@@ -46,9 +46,9 @@ sampler:
   top_p: 0.95
 
 training:
-  batch_size: 32
-  micro_batch_size: 16
-  gradient_checkpointing: true
+  batch_size: 8
+  micro_batch_size: 8
+  gradient_checkpointing: false
   dtype: float32
   learning_rate: 5.0e-3
   no_amp: true
