fix: SEOP Fix 35 — gradient death prevention (clamp unitary divergence, raise gradient_clip)
Root cause: after warmup ends at step 2000, Cayley propagator activates and
amplifies psi_energy. The unitary divergence log(psi_energy_norm)² grows
quadratically without bound, dominates loss, and gradient_clip=1.0 kills all
useful NLL gradients → training dies at step 2180.

Three fixes:
- Clamp psi_energy_norm to [1e-3, 10.0] before log² in model.py
- Raise gradient_clip from 1.0 to 5.0 across all configs
- Reduce unitary_lambda from 0.1 to 0.01 (Cayley enforces unitarity structurally)

Also includes: EOS detection in generate(), formatting cleanup, V8 fixes.

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ runs/
 checkpoints/
 
 # Tokenizer (large file)
-tokenizer/tokenizer.json
 tokenizer/*.model
 
 # Logs
@@ -58,10 +57,10 @@ Thumbs.db
 venv/
 ENV/
 
-# Test outputs
-test_*.py
+# Test outputs (scripts at repo root)
+/test_*.py
 !test_xpu_local.py
-profile_*.py
+/profile_*.py
 
 # OMC/Agent
 .omc/
