feat: add Optuna hyperparameter sweep and NAS search scripts
sweep/hyperparam_sweep.py: searches learning rate, gradient clip, V8
gammas/thresholds, encoder sparsity using convergence speed as proxy.
TPE sampler, median pruning, SQLite storage for resumability.

sweep/nas_search.py: searches hidden_dim, num_layers, state_dim,
mimo_groups, V8 feature combos with efficiency-adjusted scoring
(penalizes large models). Same Optuna framework.

Both scripts smoke-tested with 2 trials each.

--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,8 @@ wandb/
 outputs/
 *.onnx
 
+# Sweep databases (Optuna results)
+sweep/*.db
+
 # Diagnostic scripts (keep in repo for reproducibility)
 # diagnose_*.py, debug_*.py, analyze_*.py are committed intentionally
