feat: KPM-ChebyKAN propagator — O(D) Chebyshev expansion replaces O(D³) solve
- New sem/propagator/chebyshev_kpm.py: Jackson kernel + resolvent coefficients + KPM solve
- Learnable Chebyshev coefficients (KAN-style) initialized from analytical resolvent
- Gershgorin spectral radius bound for Laplacian rescaling
- 3-term Chebyshev recurrence with sparse matvec: O(k·sparsity·D) vs O(D³)
- Wired into CayleySolitonPropagator with use_chebyshev_kpm config flag
- Float64 upcast fix for direct_solve path (cloud singular matrix fix)
- 6 new tests all passing, 130 total tests pass

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -31,6 +31,8 @@ propagator:
   laplacian_sparsity: 5
   lazy_cg: true
   lazy_cg_tol: 1.0e-6
+  use_chebyshev_kpm: true
+  chebyshev_degree: 12
 
 quantizer:
   codebook_size: 256
