feat: modern sampler chain — composable LogitsProcessor with min-p, typical, repetition/frequency/presence penalty, no-repeat-ngram, top-a, epsilon/eta cutoff
SEOP Fix 59: Replaces hardcoded temp→topk→topp pipeline with composable
LogitsProcessorList chain matching HuggingFace/llama.cpp standards.

New file: sem/sampler/logits_processors.py (12 processors + builder)
Modified: sem/config.py (SamplerConfig +12 fields, all default-disabled)
Modified: sem/sampler/born_collapse.py (processor chain integration)
Modified: sem/model.py (wire processors, pass input_ids for rep penalty)
Modified: tests/test_born.py (38 tests covering all processors)
Modified: 15 configs/*.yaml (new sampler fields)

All 163 tests pass. Backward compatible — default config produces
identical behavior (TopK+TopP chain only, no penalties).

--- a/configs/test.yaml
+++ b/configs/test.yaml
@@ -44,6 +44,16 @@ sampler:
   temperature: 1.0
   top_k: 50
   top_p: 0.95
+  min_p: 0.0
+  typical_p: 1.0
+  repetition_penalty: 1.0
+  frequency_penalty: 0.0
+  presence_penalty: 0.0
+  no_repeat_ngram_size: 0
+  top_a: 0.0
+  epsilon_cutoff: 0.0
+  eta_cutoff: 0.0
+  temperature_last: false
 
 training:
   # SEOP Fix 58: GPU Saturation settings (batch=8, 16 OOM'd)
