feat: bake sweep-optimized params into all configs and defaults — HP best 6.982, NAS best 6.979 from 4xA100 cloud sweep; V8 combo: lindblad+quaternionic+mHC ON, hybrid_automata OFF

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -1,7 +1,6 @@
-# SEM V5.5 "Lean Crystal" - A100/H100 80GB Maximum Throughput
-# bf16 AMP + torch.compile(max-autotune) + gradient checkpointing
-# Born sampler [B*S, 256]->[B*S, 32768] is VRAM bottleneck (~17GB at B=32,S=2048)
-# Expected: ~30-50k tok/s on A100, ~60-80k tok/s on H100
+# SEM V5.5 "Lean Crystal" - A100 80GB Maximum Throughput
+# Sweep-optimized params from 4xA100 cloud sweep (2026-02-08)
+# bf16 AMP + gradient checkpointing, large batch
 
 model:
   hidden_dim: 256
@@ -10,11 +9,15 @@ model:
   max_seq_length: 2048
 
 encoder:
-  sdr_sparsity: 32
+  sdr_sparsity: 16
   sdr_candidates: 128
-  sinkhorn_epsilon: 0.05
-  sinkhorn_max_iter: 30
+  sinkhorn_epsilon: 0.07
+  sinkhorn_max_iter: 90
   sinkhorn_tol: 1.0e-3
+  sinkhorn_auto_epsilon: true
+  sinkhorn_auto_epsilon_scale: 0.04
+  soft_sparse: true
+  soft_sparse_temp: 0.1
 
 spinor:
   block_size: 8
@@ -24,15 +27,16 @@ spinor:
   d_conv: 4
 
 propagator:
-  cayley_dt: 0.1
+  cayley_dt: 0.02
   cg_max_iter: 5
   cg_tol: 1.0e-6
-  nonlinear_alpha: 0.1
-  laplacian_sparsity: 5
+  nonlinear_alpha: 0.12
+  laplacian_sparsity: 6
   lazy_cg: true
   lazy_cg_tol: 1.0e-6
+  pit_gamma: 0.05
   use_chebyshev_kpm: true
-  chebyshev_degree: 12
+  chebyshev_degree: 16
 
 quantizer:
   codebook_size: 256
@@ -43,11 +47,11 @@ quantizer:
 
 sampler:
   temperature: 1.0
-  top_k: 50
-  top_p: 0.95
+  top_k: 40
+  top_p: 0.92
   min_p: 0.0
-  typical_p: 1.0
-  repetition_penalty: 1.0
+  typical_p: 0.92
+  repetition_penalty: 1.43
   frequency_penalty: 0.0
   presence_penalty: 0.0
   no_repeat_ngram_size: 0
@@ -61,11 +65,16 @@ training:
   micro_batch_size: 32
   gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
-  learning_rate: 6.0e-4
-  weight_decay: 0.01
+  learning_rate: 8.6e-4
+  weight_decay: 0.002
+  encoder_lr_scale: 0.016
   warmup_steps: 2000
   max_steps: 100000
-  gradient_clip: 5.0
+  gradient_clip: 17.0
+  unitary_lambda: 0.006
+  unitary_clamp_min: 0.01
+  unitary_clamp_max: 6.9
+  label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
   num_workers: 8
@@ -82,6 +91,19 @@ training:
   wandb_enabled: true
   timing_enabled: true
   timing_log_interval: 1
+
+v8:
+  use_lindblad: true
+  use_hybrid_automata: false
+  use_quaternionic: true
+  use_mhc: true
+  mhc_streams: 8
+  mhc_num_iters: 10
+  mhc_tau: 0.031
+  lindblad_gamma: 0.007
+  num_lindblad_ops: 4
+  curvature_threshold: 0.64
+  condition_threshold: 62.0
 
 curriculum:
   enabled: true
