--- a/configs/cloud_fast.yaml
+++ b/configs/cloud_fast.yaml
@@ -1,18 +1,23 @@
 # SEM V5.5 Cloud Training - FAST VERSION for 1-hour target
+# Sweep-optimized params from 4xA100 cloud sweep (2026-02-08)
 # Reduces CG iterations and layers for speed
 
 model:
   hidden_dim: 256
-  num_layers: 8  # Reduced from 16
+  num_layers: 8
   vocab_size: 32768
-  max_seq_length: 256  # Reduced from 512
+  max_seq_length: 256
 
 encoder:
   sdr_sparsity: 16
   sdr_candidates: 64
-  sinkhorn_epsilon: 0.05
-  sinkhorn_max_iter: 20
+  sinkhorn_epsilon: 0.07
+  sinkhorn_max_iter: 90
   sinkhorn_tol: 1.0e-3
+  sinkhorn_auto_epsilon: true
+  sinkhorn_auto_epsilon_scale: 0.04
+  soft_sparse: true
+  soft_sparse_temp: 0.1
 
 spinor:
   block_size: 8
@@ -22,11 +27,14 @@ spinor:
   d_conv: 4
 
 propagator:
-  cayley_dt: 0.1
-  cg_max_iter: 3  # Reduced from 10
+  cayley_dt: 0.02
+  cg_max_iter: 3
   cg_tol: 1.0e-4
-  nonlinear_alpha: 0.1
-  laplacian_sparsity: 4
+  nonlinear_alpha: 0.12
+  laplacian_sparsity: 6
+  pit_gamma: 0.05
+  use_chebyshev_kpm: true
+  chebyshev_degree: 16
 
 quantizer:
   codebook_size: 512
@@ -37,11 +45,11 @@ quantizer:
 
 sampler:
   temperature: 1.0
-  top_k: 50
-  top_p: 0.95
+  top_k: 40
+  top_p: 0.92
   min_p: 0.0
-  typical_p: 1.0
-  repetition_penalty: 1.0
+  typical_p: 0.92
+  repetition_penalty: 1.43
   frequency_penalty: 0.0
   presence_penalty: 0.0
   no_repeat_ngram_size: 0
@@ -55,11 +63,16 @@ training:
   micro_batch_size: 16
   gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
-  learning_rate: 6.0e-4
-  weight_decay: 0.1
+  learning_rate: 8.6e-4
+  weight_decay: 0.002
+  encoder_lr_scale: 0.016
   warmup_steps: 100
-  max_steps: 3000  # Reduced for 1-hour target
-  gradient_clip: 5.0
+  max_steps: 3000
+  gradient_clip: 17.0
+  unitary_lambda: 0.006
+  unitary_clamp_min: 0.01
+  unitary_clamp_max: 6.9
+  label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
   num_workers: 2
@@ -68,12 +81,25 @@ training:
   stable_steps: 0
   decay_steps: 500
   lr_min_ratio: 0.1
-  log_interval: 5  # More frequent logging
+  log_interval: 5
   health_check_interval: 100
   checkpoint_interval: 500
   keep_checkpoints: 2
   wandb_project: "sem-v55-cloud"
   wandb_enabled: false
+
+v8:
+  use_lindblad: true
+  use_hybrid_automata: false
+  use_quaternionic: true
+  use_mhc: true
+  mhc_streams: 8
+  mhc_num_iters: 10
+  mhc_tau: 0.031
+  lindblad_gamma: 0.007
+  num_lindblad_ops: 4
+  curvature_threshold: 0.64
+  condition_threshold: 62.0
 
 curriculum:
   enabled: false
