--- a/configs/h100_max.yaml
+++ b/configs/h100_max.yaml
@@ -1,21 +1,24 @@
 # SEM V5.5 "Lean Crystal" - H100 Maximum Aggression
+# Sweep-optimized params from 4xA100 cloud sweep (2026-02-08)
 # Target: 80GB VRAM H100, maximize throughput
 
 model:
-  hidden_dim: 256           # Larger model for H100
-  num_layers: 12            # More layers
+  hidden_dim: 256
+  num_layers: 12
   vocab_size: 50262         # GPT-2 tokenizer
-  max_seq_length: 512       # Moderate sequence length
+  max_seq_length: 512
 
 encoder:
-  simple_mode: true         # Direct embedding → complex (proven)
+  simple_mode: true
   sdr_sparsity: 16
   sdr_candidates: 128
-  sinkhorn_epsilon: 0.05
-  sinkhorn_max_iter: 20
+  sinkhorn_epsilon: 0.07
+  sinkhorn_max_iter: 90
   sinkhorn_tol: 1.0e-3
+  sinkhorn_auto_epsilon: true
+  sinkhorn_auto_epsilon_scale: 0.04
   soft_sparse: true
-  soft_sparse_temp: 1.0
+  soft_sparse_temp: 0.1
 
 spinor:
   block_size: 8
@@ -28,10 +31,13 @@ propagator:
   cayley_dt: 0.02
   cg_max_iter: 10
   cg_tol: 2.0e-3
-  nonlinear_alpha: 0.25
-  laplacian_sparsity: 4
+  nonlinear_alpha: 0.12
+  laplacian_sparsity: 6
   lazy_cg: true
   lazy_cg_tol: 2.0e-3
+  pit_gamma: 0.05
+  use_chebyshev_kpm: true
+  chebyshev_degree: 16
 
 quantizer:
   codebook_size: 256
@@ -42,11 +48,11 @@ quantizer:
 
 sampler:
   temperature: 1.0
-  top_k: 50
-  top_p: 0.95
+  top_k: 40
+  top_p: 0.92
   min_p: 0.0
-  typical_p: 1.0
-  repetition_penalty: 1.0
+  typical_p: 0.92
+  repetition_penalty: 1.43
   frequency_penalty: 0.0
   presence_penalty: 0.0
   no_repeat_ngram_size: 0
@@ -56,34 +62,48 @@ sampler:
   temperature_last: false
 
 training:
-  # H100 Maximum Throughput (reduced batch to avoid OOM)
-  batch_size: 32            # Effective batch (16 micro * 2 accum)
-  micro_batch_size: 16      # Fits in A100 80GB
-  gradient_checkpointing: true  # Saves ~40% VRAM
+  batch_size: 32
+  micro_batch_size: 16
+  gradient_checkpointing: true
   dtype: float32
-  learning_rate: 7.0e-3     # Scaled: sqrt(32/64) * 1e-2
-  no_amp: false             # Use AMP on H100
-  encoder_lr_scale: 1.0
-  weight_decay: 0.01
+  learning_rate: 8.6e-4
+  no_amp: false
+  encoder_lr_scale: 0.016
+  weight_decay: 0.002
   warmup_steps: 200
-  max_steps: 10000          # Fast iteration
-  gradient_clip: 3.0
-  unitary_lambda: 0.0
+  max_steps: 10000
+  gradient_clip: 17.0
+  unitary_lambda: 0.006
+  unitary_clamp_min: 0.01
+  unitary_clamp_max: 6.9
+  label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
-  num_workers: 8            # Max parallel loading
+  num_workers: 8
   shuffle_buffer_size: 50000
   scheduler_type: "cosine"
   stable_steps: 0
   decay_steps: 10000
   lr_min_ratio: 0.1
-  label_smoothing: 0.0
   log_interval: 10
   health_check_interval: 100
   checkpoint_interval: 1000
   keep_checkpoints: 3
   wandb_project: "sem-v55-h100"
   wandb_enabled: true
+
+v8:
+  use_lindblad: true
+  use_hybrid_automata: false
+  use_quaternionic: true
+  use_mhc: true
+  mhc_streams: 8
+  mhc_num_iters: 10
+  mhc_tau: 0.031
+  lindblad_gamma: 0.007
+  num_lindblad_ops: 4
+  curvature_threshold: 0.64
+  condition_threshold: 62.0
 
 curriculum:
   enabled: false
