feat: multi-GPU DDP training + fix vocab_size 32768→50262 + torch.compile
- hf_train_lightning.py: wire --devices/-1, --strategy/ddp, --precision/bf16-mixed,
  torch.compile(reduce-overhead), proper CUDA vs XPU branching, gradient
  accumulation adjusted for multi-GPU (batch // (micro_batch * devices))
- sem/data/streaming.py: DDP-aware sharding via RANK/WORLD_SIZE env vars,
  each (rank, worker) pair gets unique data slice via HF datasets .shard()
- configs/*: fix vocab_size 32768→50262 to match GPT-2 tokenizer (50257+5 special)
- sem/config.py: default vocab_size 32768→50262
- configs/a100_optimized.yaml: batch_size 512→2048, micro_batch 32→64, workers 8→4
- launch_job.py: default flavor a10080x4, timeout 6h, pass --devices -1 --strategy ddp --precision bf16-mixed

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -1,11 +1,11 @@
-# SEM V5.5 "Lean Crystal" - A100 80GB Maximum Throughput
+# SEM V5.5 "Lean Crystal" - 4xA100 80GB Maximum Throughput
 # Sweep-optimized params from 4xA100 cloud sweep (2026-02-08)
-# bf16 AMP + gradient checkpointing, large batch
+# bf16-mixed precision, DDP across 4 GPUs
 
 model:
   hidden_dim: 256
   num_layers: 8
-  vocab_size: 32768
+  vocab_size: 50262
   max_seq_length: 2048
 
 encoder:
@@ -61,9 +61,9 @@ sampler:
   temperature_last: false
 
 training:
-  batch_size: 512
-  micro_batch_size: 32
-  gradient_checkpointing: false  # Disabled - tensor mismatch bug
+  batch_size: 2048
+  micro_batch_size: 64
+  gradient_checkpointing: false
   dtype: float32
   learning_rate: 8.6e-4
   weight_decay: 0.002
@@ -77,7 +77,7 @@ training:
   label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
-  num_workers: 8
+  num_workers: 4
   shuffle_buffer_size: 50000
   scheduler_type: "wsd"
   stable_steps: 0
