--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -62,8 +62,8 @@ sampler:
 
 training:
   batch_size: 2048
-  micro_batch_size: 64
-  gradient_checkpointing: false
+  micro_batch_size: 32
+  gradient_checkpointing: true
   dtype: float32
   learning_rate: 8.6e-4
   weight_decay: 0.002
