perf: enable propagator warmup + fix console logger + speed optimizations
- Propagator alpha ramps 0→1 over warmup_steps (2000) using Chebyshev KPM
  (bypasses CG solver entirely — SEOP Fix 48 convergence issue is moot)
- Console logger reads train/loss from callback_metrics instead of
  outputs['loss'] which was divided by accumulate_grad_batches
- tok/s uses per-step timing instead of stale running average
- Gradient checkpointing OFF — model uses <25GB peak, A100 has 70GB usable;
  grad checkpointing was doubling forward compute to save 0.8GB
- Sinkhorn encoder: remove convergence check (.item() GPU-CPU sync stall
  per iteration); run fixed iteration count only
- Sinkhorn hyper_connections: remove float64 upcast + Newton polishing
  (massive simplification for 4x4 matrices at mhc_num_iters=3)
- Lindblad: cache L†L computation during eval
- DDP: use DDPStrategy(find_unused_parameters=True, static_graph=True)
- A100 config: sinkhorn 90→15, num_workers 4→8, health_check 50→500,
  mhc_num_iters 10→3
- Tests: relax Sinkhorn tolerance to match simplified solver

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -12,7 +12,7 @@ encoder:
   sdr_sparsity: 16
   sdr_candidates: 128
   sinkhorn_epsilon: 0.07
-  sinkhorn_max_iter: 90
+  sinkhorn_max_iter: 15
   sinkhorn_tol: 1.0e-3
   sinkhorn_auto_epsilon: true
   sinkhorn_auto_epsilon_scale: 0.04
@@ -63,7 +63,7 @@ sampler:
 training:
   batch_size: 2048
   micro_batch_size: 32
-  gradient_checkpointing: true
+  gradient_checkpointing: false
   dtype: float32
   learning_rate: 8.6e-4
   weight_decay: 0.002
@@ -77,14 +77,14 @@ training:
   label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
-  num_workers: 4
+  num_workers: 8
   shuffle_buffer_size: 50000
   scheduler_type: "wsd"
   stable_steps: 0
   decay_steps: 10000
   lr_min_ratio: 0.1
   log_interval: 1
-  health_check_interval: 50
+  health_check_interval: 500
   checkpoint_interval: 200
   keep_checkpoints: 5
   wandb_project: "sem-v55-a100"
@@ -98,7 +98,7 @@ v8:
   use_quaternionic: true
   use_mhc: true
   mhc_streams: 8
-  mhc_num_iters: 10
+  mhc_num_iters: 3
   mhc_tau: 0.031
   lindblad_gamma: 0.007
   num_lindblad_ops: 4
