fix: re-enable grad checkpointing + checkpoint propagator (OOM with Chebyshev KPM)
Propagator's 16 Chebyshev KPM iterations create large autograd graphs that
OOM on A100 80GB at micro_batch=32. Grad checkpointing is needed — the prior
analysis (only 0.8GB savings) was calculated with propagator disabled. With
propagator on, the savings are ~10-20GB. Now checkpointing both Mamba layers
AND propagator.

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -63,7 +63,7 @@ sampler:
 training:
   batch_size: 2048
   micro_batch_size: 32
-  gradient_checkpointing: false
+  gradient_checkpointing: true
   dtype: float32
   learning_rate: 8.6e-4
   weight_decay: 0.002
