--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -28,6 +28,7 @@ spinor:
 
 propagator:
   cayley_dt: 0.02
+  num_layers: 1 # SEOP Fix: Decoupled from model depth (was 8)
   cg_max_iter: 5
   cg_tol: 1.0e-6
   nonlinear_alpha: 0.12
@@ -68,7 +69,7 @@ training:
   learning_rate: 8.6e-4
   weight_decay: 0.002
   encoder_lr_scale: 0.016
-  warmup_steps: 2000
+  warmup_steps: 500 # SEOP Fix: Reduced warmup to reach peak LR faster
   max_steps: 100000
   gradient_clip: 17.0
   unitary_lambda: 0.006
