fix: SEOP audit fixes 77-78 — SpinorGate 256× speedup, numerical stability, safe_complex
SEOP Fix 77: Engram injection uses per-position RMS denominator (not per-dim
magnitude) to prevent 2-10× noise amplification when |psi| is small.

SEOP Fix 78: Cayley-Soliton numerical stability — clamp intensity
normalization denominator (1e-6), cap envelope (10×), cap norm rescaling
(10×), raise norm eps from 1e-12 to 1e-8.

SpinorGate optimization: Discretize gate to K=8 levels, precompute K×N
Cayley maps instead of B×S×N per-token solves. 256× reduction in
linalg.solve calls (32K→128 per layer). Straight-through estimator
preserves gate gradients. Unitarity guarantee maintained (exact Cayley).

Additional fixes:
- model.py:706 bug: hybrid_automata unitarity loss no longer added when
  unitary_lambda=0
- model.py Fix 56 stale wrapper: simplified to postnorm H_real directly
  (after Fix 73, H_imag is zeros)
- 4× torch.complex() replaced with safe_complex() (cayley_soliton,
  health, test_chebyshev_kpm)
- streaming.py: 60s ThreadPoolExecutor timeout on load_dataset() to
  prevent indefinite hangs
- configs/a100_optimized: micro_batch_size 128→32 (OOM fix)

--- a/configs/a100_optimized.yaml
+++ b/configs/a100_optimized.yaml
@@ -64,18 +64,19 @@ sampler:
 
 training:
   batch_size: 2048
-  micro_batch_size: 128 # SEOP Fix: Reduce accumulation steps (16 -> 4)
+  micro_batch_size: 32 # SEOP Fix: Revert to 32 to fix OOM (128 was too aggressive)
   gradient_checkpointing: true
   dtype: float32
   learning_rate: 8.6e-4
   weight_decay: 0.002
   encoder_lr_scale: 0.016
-  warmup_steps: 500 # SEOP Fix: Reduced warmup to reach peak LR faster
+  warmup_steps: 500
   max_steps: 100000
   gradient_clip: 17.0
   unitary_lambda: 0.006
   unitary_clamp_min: 0.01
   unitary_clamp_max: 6.9
+  low_vram_mode: false # Keep false for speed, only enable if 32 fails
   label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
