--- a/configs/l40s_full.yaml
+++ b/configs/l40s_full.yaml
@@ -65,11 +65,11 @@ training:
   gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
   learning_rate: 8.6e-4
-  weight_decay: 0.002
+  weight_decay: 0.1
   encoder_lr_scale: 0.016
   warmup_steps: 2000
   max_steps: 100000
-  gradient_clip: 17.0
+  gradient_clip: 1.0
   unitary_lambda: 0.006
   unitary_clamp_min: 0.01
   unitary_clamp_max: 6.9
@@ -88,7 +88,7 @@ training:
   keep_checkpoints: 5
   wandb_project: "sem-v55-l40s"
   wandb_enabled: true
-  timing_enabled: true
+  timing_enabled: false
   timing_log_interval: 50
   no_compile: true
   compile_mode: "default"
@@ -109,12 +109,12 @@ v8:
 curriculum:
   enabled: true
   stages:
+    - min_score: 0
+      seq_len: 512
+      min_steps: 5000
     - min_score: 2
       seq_len: 1024
       min_steps: 20000
-    - min_score: 3
-      seq_len: 2048
-      min_steps: 40000
     - min_score: 3
       seq_len: 2048
       min_steps: 40000
