--- a/configs/xpu_optimized.yaml
+++ b/configs/xpu_optimized.yaml
@@ -66,11 +66,11 @@ training:
   gradient_checkpointing: false  # Disabled - tensor mismatch bug
   dtype: float32
   learning_rate: 8.6e-4
-  weight_decay: 0.002
+  weight_decay: 0.1
   encoder_lr_scale: 0.016
   warmup_steps: 2000
   max_steps: 100000
-  gradient_clip: 17.0
+  gradient_clip: 1.0
   unitary_lambda: 0.006
   unitary_clamp_min: 0.01
   unitary_clamp_max: 6.9
@@ -89,7 +89,7 @@ training:
   keep_checkpoints: 3
   wandb_project: "sem-v55-xpu"
   wandb_enabled: false
-  timing_enabled: true
+  timing_enabled: false
   timing_log_interval: 10
 
 v8:
