--- a/configs/rtx3060_max.yaml
+++ b/configs/rtx3060_max.yaml
@@ -1,79 +1,26 @@
-# SEM V5.5 RTX 3060 6GB - Sweep-Optimized
-# Sweep-optimized params from 4xA100 cloud sweep (2026-02-08)
-# VRAM constrained: simple_mode encoder, no AMP (complex incompatible)
+# SEM V5.5 RTX 3060 6GB - Fast Convergence
+# Reduced model for fast iteration on 6GB VRAM
+# Gradient accumulation for smooth loss curve
 # V8 features enabled (sweep-proven combo: Lindblad + Quaternionic + mHC)
 
 model:
-  model_version: "v55"
-  hidden_dim: 1024
-  num_layers: 8
+  hidden_dim: 256
+  num_layers: 4
   vocab_size: 50262
   max_seq_length: 256
 
-encoder:
-  simple_mode: true
-  sdr_sparsity: 16
-  sdr_candidates: 128
-  sinkhorn_epsilon: 0.07
-  sinkhorn_max_iter: 90
-  sinkhorn_tol: 1.0e-3
-  sinkhorn_auto_epsilon: true
-  sinkhorn_auto_epsilon_scale: 0.04
-  soft_sparse: true
-  soft_sparse_temp: 0.1
-
-spinor:
-  block_size: 4
-  num_blocks: 24
-  state_dim: 64
-  mimo_groups: 8
-  d_conv: 4
-
-propagator:
-  cayley_dt: 0.02
-  cg_max_iter: 10
-  cg_tol: 2.0e-3
-  nonlinear_alpha: 0.12
-  laplacian_sparsity: 6
-  lazy_cg: true
-  lazy_cg_tol: 2.0e-3
-  pit_gamma: 0.05
-  use_chebyshev_kpm: true
-  chebyshev_degree: 16
-
-quantizer:
-  codebook_size: 256
-  group_size: 2
-  fisher_ema_decay: 0.999
-  outlier_percentile: 0.01
-  dead_code_threshold: 50
-
-sampler:
-  temperature: 1.0
-  top_k: 40
-  top_p: 0.92
-  min_p: 0.0
-  typical_p: 0.92
-  repetition_penalty: 1.43
-  frequency_penalty: 0.0
-  presence_penalty: 0.0
-  no_repeat_ngram_size: 0
-  top_a: 0.0
-  epsilon_cutoff: 0.0
-  eta_cutoff: 0.0
-  temperature_last: false
-
 training:
-  batch_size: 4
-  micro_batch_size: 4
+  batch_size: 48
+  micro_batch_size: 48
+  low_vram_mode: true
   gradient_checkpointing: true
   dtype: float32
-  learning_rate: 8.6e-4
-  no_amp: true             # Complex tensors don't support bf16
+  learning_rate: 3.0e-4  # SEOP Fix 85: Sqrt-scaled LR for 12K effective batch
+  no_amp: true
   no_compile: true
   encoder_lr_scale: 0.016
   weight_decay: 0.1
-  warmup_steps: 100
+  warmup_steps: 500  # SEOP Fix 85: Gradual warmup (propagator warmup = 2x = 1000)
   max_steps: 10000
   gradient_clip: 1.0
   unitary_lambda: 0.006
@@ -82,16 +29,18 @@ training:
   label_smoothing: 0.058
   dataset_name: "HuggingFaceFW/fineweb-edu"
   tokenizer_path: "tokenizer/"
-  num_workers: 4
+  num_workers: 8
+  prefetch_factor: 4
+  pin_memory: true
   shuffle_buffer_size: 10000
   scheduler_type: "cosine"
   stable_steps: 0
   decay_steps: 10000
   lr_min_ratio: 0.1
-  log_interval: 5
-  health_check_interval: 50
-  checkpoint_interval: 2000
-  keep_checkpoints: 3
+  log_interval: 10
+  health_check_interval: 100
+  checkpoint_interval: 1000
+  keep_checkpoints: 5
   wandb_project: "sem-v8-optimized"
   wandb_enabled: false
 
@@ -100,13 +49,16 @@ v8:
   use_hybrid_automata: false
   use_quaternionic: true
   use_mhc: true
-  mhc_streams: 4            # Reduced for VRAM
-  mhc_num_iters: 5          # Reduced for VRAM
+  mhc_streams: 4
+  mhc_num_iters: 5
   mhc_tau: 0.031
   lindblad_gamma: 0.007
-  num_lindblad_ops: 2        # Reduced for VRAM
+  num_lindblad_ops: 2
   curvature_threshold: 0.64
   condition_threshold: 62.0
+
+encoder:
+  soft_sparse: true  # SEOP Fix 85: Re-enable soft_sparse with adaptive learnable temp
 
 curriculum:
   enabled: false
